[tool.poetry]
name = "veils"
version = "0.2.1"
description = "Python Veil Objects"
authors = ["monomonedula <valh@tuta.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/monomonedula/veil"
homepage = "https://github.com/monomonedula/veil"
keywords = ["decorator", "dto", "memoization", "utility"]


[tool.poetry.dependencies]
python = "^3.6"
wrapt = "^1.12.1"
cachetools = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.10.1"
async-lru = "^1.0.2"
wirerope = "^0.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
